prevent headline icons from being cutoff

--- a/wagtailio/static/sass/components/_headline.scss
+++ b/wagtailio/static/sass/components/_headline.scss
@@ -3,7 +3,6 @@
     @include sf-spacing();
     position: relative;
     padding: 80px 0 0;
-    overflow: hidden;
 
     @include media-query(medium) {
         padding: 130px 0 0;
